[package]
name = "bank"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
hashbrown = "0.13.1"
log = "0.4.17"
serde_json = "1.0.86"
serde = { version = "1.0.147", features = ["derive"] }
thiserror = "1.0.37"